--- a/AI_C2/2-1/2-1.vcxproj
+++ b/AI_C2/2-1/2-1.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c2fac5ac-583a-4d33-bfb2-461d00a609dd}</ProjectGuid>
-    <RootNamespace>AIC2</RootNamespace>
+    <ProjectGuid>{5044585b-8cf1-406e-94d8-a1c864532eb8}</ProjectGuid>
+    <RootNamespace>My21</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>1-1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AI_C2.c" />
+    <ClCompile Include="2-1.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
