--- a/AI_C2/2-1/2-1.vcxproj.filters
+++ b/AI_C2/2-1/2-1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AI_C2.c">
+    <ClCompile Include="2-1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
